[gd_scene load_steps=34 format=3 uid="uid://bkmgf0sqr7pk3"]

[ext_resource type="Shader" uid="uid://ba4x50f4o2nba" path="res://shaders/blink.tres" id="1_a41dw"]
[ext_resource type="Script" path="res://scripts/golem.gd" id="1_v0or6"]
[ext_resource type="PackedScene" uid="uid://honmn2s1smfo" path="res://scenes/enemies/enemy_healthbar.tscn" id="2_gx71o"]
[ext_resource type="Texture2D" uid="uid://cc7grb23laahh" path="res://assets/sprites/enemies/golem_attack_sheet.png" id="3_gq6uq"]
[ext_resource type="Texture2D" uid="uid://bplegj60fn7m8" path="res://assets/sprites/enemies/golem_run_sheet.png" id="3_op12x"]
[ext_resource type="Texture2D" uid="uid://cn4en6pclngws" path="res://assets/sprites/enemies/golem idle sheet.png" id="3_xu4mc"]
[ext_resource type="PackedScene" uid="uid://cj5ky0bvhedwe" path="res://scenes/player/hurt_player_area.tscn" id="4_d7ck2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg4no"]
shader = ExtResource("1_a41dw")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.92549, 0.152941, 0.247059, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb3va"]
atlas = ExtResource("3_gq6uq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_org3a"]
atlas = ExtResource("3_gq6uq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0ota"]
atlas = ExtResource("3_gq6uq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x6dn"]
atlas = ExtResource("3_gq6uq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcohe"]
atlas = ExtResource("3_gq6uq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0qbp"]
atlas = ExtResource("3_gq6uq")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_38kou"]
atlas = ExtResource("3_gq6uq")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3nmc"]
atlas = ExtResource("3_gq6uq")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwu7"]
atlas = ExtResource("3_xu4mc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_81n4h"]
atlas = ExtResource("3_xu4mc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdfoa"]
atlas = ExtResource("3_xu4mc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_80p1y"]
atlas = ExtResource("3_xu4mc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lv10"]
atlas = ExtResource("3_xu4mc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_irggm"]
atlas = ExtResource("3_op12x")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppyrn"]
atlas = ExtResource("3_op12x")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nig5o"]
atlas = ExtResource("3_op12x")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch6v2"]
atlas = ExtResource("3_op12x")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c648"]
atlas = ExtResource("3_op12x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_inofy"]
atlas = ExtResource("3_op12x")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_m63n4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb3va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_org3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ota")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x6dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcohe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0qbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38kou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0qbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3nmc")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81n4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdfoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80p1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lv10")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irggm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppyrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nig5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch6v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c648")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inofy")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o0ern"]
radius = 6.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_clcye"]
radius = 128.0

[sub_resource type="Animation" id="Animation_f1a1l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GolemSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GolemSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.92549, 0.152941, 0.247059, 1)]
}

[sub_resource type="Animation" id="Animation_qrb02"]
resource_name = "hurt_blink"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GolemSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GolemSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.92549, 0.152941, 0.247059, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c00k1"]
_data = {
"RESET": SubResource("Animation_f1a1l"),
"hurt_blink": SubResource("Animation_qrb02")
}

[node name="golem" type="CharacterBody2D" groups=["enemies"]]
z_index = 4
collision_layer = 8
collision_mask = 16
script = ExtResource("1_v0or6")

[node name="GolemSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_bg4no")
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_m63n4")
animation = &"attack"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[node name="GolemCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_o0ern")

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-7, 0)
collision_mask = 16

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(7, 0)
collision_mask = 16

[node name="ChasePlayerArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="DetectionCollider" type="CollisionShape2D" parent="ChasePlayerArea"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_clcye")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c00k1")
}

[node name="enemy_healthbar" parent="." instance=ExtResource("2_gx71o")]
position = Vector2(0, -50)

[node name="HurtPlayerArea" parent="." instance=ExtResource("4_d7ck2")]
position = Vector2(0, -4)
scale = Vector2(2.5, 0.5)
damage = 2
attack_wait = 1.0

[node name="RoamTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="animation_finished" from="GolemSprite" to="." method="_on_golem_sprite_animation_finished"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
